cambie el titulo

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Data Lovers natalia</title>
+    <title>Data Lovers natalia 2</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
