--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h4>welcome to the<br>world of</h4>
+    <h1>Studio Ghibli</h1>
+    <p>"Any woman is just as capable of being a hero as any man".</p>
+    <br>
+    <h2>A brief overview</h2>
+    <p>Found by director Hayao Miyasaki and Isao 
+      Takahata and producer Toshio Suzuki in 1985,
+      Studio Ghibli,Inc.is a Japanese animation studio
+      based in Koganei, Tokyo.</p>
+
+
+
+
+
     <div id="root"></div>
-    <h1>hola a todos</h1>
+    
     <script src="main.js" type="module"></script>
   </body>
 </html>
