--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <header
     <title>Data Lovers Studio Ghibli</title>
     <link rel="stylesheet" href="style.css" />
   </head>
