footer y datos en DOM

--- a/src/index.html
+++ b/src/index.html
@@ -25,4 +25,7 @@
     
     <script src="main.js" type="module"></script>
   </body>
+  <footer>
+    <p>© 1985-2023 Studio Ghibli. All Rights Reserved.</p>
+  </footer>
 </html>
