--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,16 @@
       Studio Ghibli,Inc.is a Japanese animation studio
       based in Koganei, Tokyo.</p>
 
-
-
-
-
     <div id="root"></div>
     
+    
     <script src="main.js" type="module"></script>
+    <label for="movie-filters">Filter by:</label>
+    <select name="movie-filters" id="movie-filters">
+        <option value="a-z">A-Z</option>
+        <option value="date">By date</option>
+        <option value="best-rated">Best rated</option>
+    </select>
   </body>
   <footer>
     <p>© 1985-2023 Studio Ghibli. All Rights Reserved.</p>
