--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,13 @@
         <option value="date">By date</option>
         <option value="best-rated">Best rated</option>
     </select>
+    <ul id="movie-list">
+      <li class="movie" data-date="2021-07-20" data-rating="4.5">The Conjuring: The Devil Made Me Do It</li>
+      <li class="movie" data-date="2021-05-28" data-rating="3.8">Cruella</li>
+      <li class="movie" data-date="2021-02-26" data-rating="4.2">Tom and Jerry</li>
+      <li class="movie" data-date="2020-09-04" data-rating="4.8">Tenet</li>
+      <li class="movie" data-date="2020-12-25" data-rating="3.9">Wonder Woman 1984</li>
+    </ul>
   </body>
   <footer>
     <p>© 1985-2023 Studio Ghibli. All Rights Reserved.</p>
