--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     
     <script src="main.js" type="module"></script>
     <label for="film-filters">Sort by:</label>
-    <select name="movie-filters" id="film-filters">
+    <select name="movienpm st-filters" id="film-filters">
         <option value="a-z">A-Z</option>
         <option value="date">By date</option>
         <option value="best-rated">Best rated</option>
