--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,9 @@
       Studio Ghibli,Inc.is a Japanese animation studio
       based in Koganei, Tokyo.</p>
       <button> more</button>
+      <div id="film-list"></div>
 
-    <div id="root"></div>   
+
     
     <script src="main.js" type="module"></script>
     </body>
