--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <header>
+    
     <title>Data Lovers Studio Ghibli</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h4>welcome to the<br>world of</h4>
+    <header>
+
+    <h4>welcome to the<br>world of</h4>h
     <h1>Studio Ghibli</h1>
     <p>"Any woman is just as capable of being a hero as any man".</p>
     <br>
@@ -16,11 +18,11 @@
       Takahata and producer Toshio Suzuki in 1985,
       Studio Ghibli,Inc.is a Japanese animation studio
       based in Koganei, Tokyo.</p>
-      <button> more</button>
-      <div id="film-list"></div>
-
-
+      <!-- Las imágenes de las películas se generarán dinámicamente aquí -->
+        <div id="film-list"></div>
     
+
+    </header>
     <script src="main.js" type="module"></script>
     </body>
   <footer>
