--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,38 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-
-    <h4>welcome to the<br>world of</h4>h
+    <header id="header">
+    <h4>welcome to the<br>world of</h4>
     <h1>Studio Ghibli</h1>
-    <p>"Any woman is just as capable of being a hero as any man".</p>
-    <br>
-    <h2>A brief overview</h2>
-    <p>Found by director Hayao Miyasaki and Isao 
+    <p1>"Any woman is just as capable of being a hero as any man".</p1><br>
+    <p2>_Hayao Miyasaki</p2><br>
+  </header>
+
+  <h2>A brief overview</h2>
+    <p3>Found by director Hayao Miyasaki and Isao 
       Takahata and producer Toshio Suzuki in 1985,
       Studio Ghibli,Inc.is a Japanese animation studio
-      based in Koganei, Tokyo.</p>
-      <!-- Las imágenes de las películas se generarán dinámicamente aquí -->
+      based in Koganei, Tokyo.</p3><br>
+
+<div class ="contenedor">
+ <img class ="imagen" src='https://arc-anglerfish-arc2-prod-copesa.s3.amazonaws.com/public/OZBCWPYVTZEXRFA2ZDJENWEHTM.jpg';>
+</div>
+<button>MORE</button><br>
+
+<section class="selectors">
+  <select id="selectDirectors" class="combo-box-filter">
+    <option value=" ">Filter films by</option>
+    <option value="Hayao Miyazaki">Directed by Hayao Miyazaki</option>
+    <option value="Hiromasa Yonebayashi">Directed by Hiromasa Yonebayashi</option>
+    <option value="Isao Takahata">Directed by Isao Takahata</option>
+    <option value="Hiroyuki Morita">Directed by Hiroyuki Morita</option>
+    <option value="Gorō Miyazaki">Directed by Gorō Miyazaki</option>
+    <option value="Yoshifumi Kondō">Directed by Yoshifumi Kondō</option>
+  </select>
+<!-- Las imágenes de las películas se generarán dinámicamente aquí -->
         <div id="film-list"></div>
         
-    </header>
+    
     <script src="main.js" type="module"></script>
     </body>
   <footer>
