cambios css y formato

--- a/src/index.html
+++ b/src/index.html
@@ -2,24 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Data Lovers Studio Ghibli</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+      <header id="header">
       <h4>welcome to the<br>world of</h4>
-      <h1>Studio Ghibli</h1>
-      <p>"Any woman is just as capable of being a hero as any man".</p>
-      <br>
-      <h2>A brief overview</h2>
-      <p>Found by director Hayao Miyasaki and Isao 
-        Takahata and producer Toshio Suzuki in 1985,
-        Studio Ghibli,Inc.is a Japanese animation studio
-        based in Koganei, Tokyo.</p>
+      <h1>Studio Ghibli</h1><br>
+      <h3>"Any woman is just as capable of being a hero as any man".</h3><br>
+      <h5>-Hayao Miyazaki. </h5>
     </header>
     
-    <section class="selectors">
+   <section class="selectors">
       <select id="selectDirectors" class="combo-box-filter">
         <option value=" ">Filter films by</option>
         <option value="Hayao Miyazaki">Directed by Hayao Miyazaki</option>
