--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header id="header">
-    <h5>welcome to the<br>world of</h5>
+    <h5>welcome to the<br>world of</h5><br>
     <h1><b>Studio Ghibli</h1><br>
     <h3>"Any woman is just as capable of being a hero as any man".<br>
       -Hayao Miyazaki.</h3><br>
