funcion filtrado por director

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     
     </header>
     <br>
-    <button id="showFilmsButton">Mostrar películas</button><br>
+    <button id="showFilmsButton">Show Films:</button><br>
     <button id="goHomeButton" style="display: none;">Volver a la página principal</button><br>
     
-    <div id="film-list">
-    </div>
+    <!--<div id="film-list">
+    </div>-->
   <section class="selectors">
     <select id="selectDirectors" class="combo-box-filter">
       <option value=" ">Filter films by</option>
