cambios para pull

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
     
     </header>
     <br>
-    <button id="showFilmsButton">Show Films:</button><br>
-    <button id="goHomeButton" style="display: none;">Volver a la página principal</button><br>
+    <button id="showFilmsButton">Show all films:</button><br>
+    <button id="goHomeButton" style="display: none;">Go back to Homepage</button><br>
     
     <!--<div id="film-list">
     </div>-->
